# lattice

./: Dockerfile.worker  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
config/: __init__.py  config.yaml  settings.py
docs/: demo.md
docs/internal/: DOCUMENTATION.md
lattice/: __init__.py  main.py  metrics.py  models.py  scheduler.py
lattice/algorithms/: backfill.py  drf.py  fifo.py  gang.py  preemption.py
lattice/api/: grpc_server.py  rest_api.py
lattice/proto_gen/: __init__.py  lattice_pb2.py  lattice_pb2_grpc.py
lattice/store/: job_store.py  redis_queue.py
lattice/worker/: agent.py  docker_worker.py  pool.py
proto/: lattice.proto
scripts/: generate_proto.sh
simulation/: stress_test.py  utilisation_report.py
tests/: conftest.py  test_backfill.py  test_drf.py  test_fifo.py  test_gang.py  test_grpc_server.py  test_job_store.py  test_preemption.py  test_redis_queue.py  test_simulation.py
