[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "lattice"
version = "0.1.0"
description = "Distributed ML Job Scheduler"
requires-python = ">=3.11"
dependencies = [
    "grpcio==1.67.0",
    "grpcio-tools==1.67.0",
    "protobuf==5.28.2",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "redis==5.0.8",
    "prometheus-client==0.21.0",
    "pydantic==2.9.2",
    "PyYAML==6.0.2",
    "docker==7.1.0",
    "psutil==6.1.0",
    "numpy==2.0.2",
    "structlog==24.4.0",
    "tenacity==9.0.0",
    "rich==13.9.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
    "pytest-mock==3.14.0",
    "pytest-cov==5.0.0",
    "anyio==4.6.2",
    "fakeredis==2.26.1",
    "httpx==0.27.2",
]
simulation = [
    "matplotlib==3.9.2",
    "typer==0.12.5",
]

[project.scripts]
lattice = "lattice.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lattice*", "config*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["lattice"]
omit = ["lattice/proto_gen/*", "tests/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true
